contrib/sync_db_pools/codegen/tests/ui-fail-stable/database-types.stderr
error[E0277]: the trait bound `Unknown: Poolable` is not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
6 | struct A(Unknown);
  |          ^^^^^^^ the trait `Poolable` is not implemented for `Unknown`
  |
note: required by a bound in `rocket_sync_db_pools::Connection`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  |                             ^^^^^^^^ required by this bound in `Connection`

error[E0599]: the function or associated item `fairing` exists for struct `ConnectionPool<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
...
6 | struct A(Unknown);
  |          ^^^^^^^ function or associated item cannot be called on `ConnectionPool<A, Unknown>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Unknown: Poolable` is not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
6 | struct A(Unknown);
  |          ^^^^^^^ the trait `Poolable` is not implemented for `Unknown`
  |
note: required by a bound in `ConnectionPool`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct ConnectionPool<K, C: Poolable> {
  |                                 ^^^^^^^^ required by this bound in `ConnectionPool`

error[E0599]: the method `run` exists for struct `Connection<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
...
6 | struct A(Unknown);
  |          ^^^^^^^ method cannot be called on `Connection<A, Unknown>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: the function or associated item `get_one` exists for struct `ConnectionPool<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
...
6 | struct A(Unknown);
  |          ^^^^^^^ function or associated item cannot be called on `ConnectionPool<A, Unknown>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Vec<i32>: Poolable` is not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ the trait `Poolable` is not implemented for `Vec<i32>`
  |
note: required by a bound in `rocket_sync_db_pools::Connection`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  |                             ^^^^^^^^ required by this bound in `Connection`

error[E0599]: the function or associated item `fairing` exists for struct `ConnectionPool<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ function or associated item cannot be called on `ConnectionPool<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`

error[E0277]: the trait bound `Vec<i32>: Poolable` is not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ the trait `Poolable` is not implemented for `Vec<i32>`
  |
note: required by a bound in `ConnectionPool`
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct ConnectionPool<K, C: Poolable> {
  |                                 ^^^^^^^^ required by this bound in `ConnectionPool`

error[E0599]: the method `run` exists for struct `Connection<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ method cannot be called on `Connection<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`

error[E0599]: the function or associated item `get_one` exists for struct `ConnectionPool<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ function or associated item cannot be called on `ConnectionPool<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`

error[E0599]: the function or associated item `pool` exists for struct `ConnectionPool<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
...
6 | struct A(Unknown);
  |          ^^^^^^^ function or associated item cannot be called on `ConnectionPool<A, Unknown>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: the function or associated item `from_request` exists for struct `Connection<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
...
6 | struct A(Unknown);
  |          ^^^^^^^ function or associated item cannot be called on `Connection<A, Unknown>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  | ------------------------------------- doesn't satisfy `_: FromRequest<'_>`
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
          which is required by `rocket_sync_db_pools::Connection<A, Unknown>: FromRequest<'_>`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: the function or associated item `abort` exists for struct `Connection<A, Unknown>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:6:10
  |
3 | struct Unknown;
  | -------------- doesn't satisfy `Unknown: Poolable`
...
6 | struct A(Unknown);
  |          ^^^^^^^ function or associated item cannot be called on `Connection<A, Unknown>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  | ------------------------------------- doesn't satisfy `_: Sentinel`
  |
  = note: the following trait bounds were not satisfied:
          `Unknown: Poolable`
          which is required by `rocket_sync_db_pools::Connection<A, Unknown>: Sentinel`
note: the trait `Poolable` must be implemented
 --> $WORKSPACE/contrib/sync_db_pools/lib/src/poolable.rs
  |
  | pub trait Poolable: Send + Sized + 'static {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: items from traits can only be used if the trait is in scope
help: trait `DefaultSentinel` which provides `abort` is implemented but not in scope; perhaps you want to import it
  |
1   + use crate::rocket_sync_db_pools::rocket::sentinel::resolution::DefaultSentinel;
    |

error[E0599]: the function or associated item `pool` exists for struct `ConnectionPool<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ function or associated item cannot be called on `ConnectionPool<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`

error[E0599]: the function or associated item `from_request` exists for struct `Connection<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ function or associated item cannot be called on `Connection<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  | ------------------------------------- doesn't satisfy `_: FromRequest<'_>`
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`
          which is required by `rocket_sync_db_pools::Connection<B, Vec<i32>>: FromRequest<'_>`

error[E0599]: the function or associated item `abort` exists for struct `Connection<B, Vec<i32>>`, but its trait bounds were not satisfied
 --> tests/ui-fail-stable/database-types.rs:9:10
  |
9 | struct B(Vec<i32>);
  |          ^^^^^^^^ function or associated item cannot be called on `Connection<B, Vec<i32>>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/contrib/sync_db_pools/lib/src/connection.rs
  |
  | pub struct Connection<K, C: Poolable> {
  | ------------------------------------- doesn't satisfy `_: Sentinel`
  |
 ::: $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  | ------------------------------------------------------------------------------------------------ doesn't satisfy `Vec<i32>: Poolable`
  |
  = note: the following trait bounds were not satisfied:
          `Vec<i32>: Poolable`
          which is required by `rocket_sync_db_pools::Connection<B, Vec<i32>>: Sentinel`
  = help: items from traits can only be used if the trait is in scope
help: trait `DefaultSentinel` which provides `abort` is implemented but not in scope; perhaps you want to import it
  |
1   + use crate::rocket_sync_db_pools::rocket::sentinel::resolution::DefaultSentinel;
    |
